# afr-example-weather-station

./: .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  afr.mk  main.c
.mtbLaunchConfigs/: afr-example-weather-station Attach (JLink).launch  afr-example-weather-station Attach (KitProg3).launch  afr-example-weather-station Debug (JLink).launch  afr-example-weather-station Debug (KitProg3).launch  afr-example-weather-station Erase (JLink).launch  afr-example-weather-station Erase (KitProg3).launch  afr-example-weather-station Program (JLink).launch  afr-example-weather-station Program (KitProg3).launch
config_files/: FreeRTOSConfig.h  aws_secure_sockets_config.h  iot_config.h  iot_pkcs11_config.h
make_support/: afr.mk  mtb_afr_source.mk  mtb_cypress_source.mk  mtb_feature_ble.mk  mtb_feature_ota.mk  mtb_global_settings.mk  mtb_secure_sign.mk
source/: afe_shield_operation.c  afe_shield_operation.h  common_resource.h  console_operation.c  console_operation.h  mqtt_operation.c  mqtt_operation.h  weather_station.c
source/cy8ckit_032_oled/: display_interface.h
source/cy8ckit_032_oled/driver/: i2c_portapi.c  i2c_portapi.h
source/cy8ckit_032_oled/emwin_config/: GUI_X_FreeRTOS.c  LCDConf.c
